sample/CKA/Security/busybox1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox1
    tier: jumppod
  name: busybox1
spec:
  containers:
  - image: busybox
    name: busybox1
    command: ['sleep','3600']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
