sample/CKA/Security/busybox2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox1
    tier: jumppod
  name: busybox2
spec:
  containers:
  - image: busybox
    name: busybox2
    command: ['sleep','3600']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
