sample/CKA/Security/network-pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      run: nginx-pod
  policyTypes:
    - Ingress
  ingress:
    - from:
       - podSelector:
           matchLabels:
             tier: jumppod
